// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="c-emivhp"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="c-yzux30"
  >
    <span
      class="c-2ldwtt"
      tabindex="1"
    />
  </span>
  <span
    class="c-qgj373"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="cw6sirj"
>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      red
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      orange
    </span>
  </div>
  <div
    class="c-emivhp c-wsxxws"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      yellow
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      green
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      cyan
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      blue
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="cw6sirj cjqmbyp c-xa4xwu"
>
  <button
    class="c-emivhp c-rg592x cvey2f3"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Monday
    </span>
  </button>
  <button
    class="c-emivhp c-rg592x cvey2f3"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Tuesday
    </span>
  </button>
  <button
    class="c-emivhp c-wsxxws c-trc8a3 cvey2f3"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Wednesday
    </span>
  </button>
  <button
    class="c-emivhp c-rg592x cvey2f3"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Thursday
    </span>
  </button>
  <button
    class="c-emivhp c-rg592x cvey2f3"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Friday
    </span>
  </button>
  <button
    class="c-emivhp c-rg592x cvey2f3"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Saturday
    </span>
  </button>
  <button
    class="c-emivhp c-rg592x cvey2f3"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="cw6sirj cjqmbyp c-xa4xwu"
>
  <button
    class="c-emivhp c-rg592x cvey2f3 cs6jo0l"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Monday
    </span>
  </button>
  <button
    class="c-emivhp c-rg592x cvey2f3 cs6jo0l"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Tuesday
    </span>
  </button>
  <button
    class="c-emivhp c-wsxxws c-trc8a3 cvey2f3 cs6jo0l"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Wednesday
    </span>
  </button>
  <button
    class="c-emivhp c-rg592x cvey2f3 cs6jo0l"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Thursday
    </span>
  </button>
  <button
    class="c-emivhp c-rg592x cvey2f3 cs6jo0l"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Friday
    </span>
  </button>
  <button
    class="c-emivhp c-rg592x cvey2f3 cs6jo0l"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Saturday
    </span>
  </button>
  <button
    class="c-emivhp c-rg592x cvey2f3 cs6jo0l"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cboe6wq"
    >
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="cw6sirj"
>
  <div
    class="c-emivhp c-wsxxws"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      red
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      orange
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      yellow
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      green
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      cyan
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      blue
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="cw6sirj"
>
  <div
    class="c-emivhp crlqugf"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="-1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      red
    </span>
  </div>
  <div
    class="c-emivhp crlqugf"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="-1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      orange
    </span>
  </div>
  <div
    class="c-emivhp crlqugf"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="-1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      yellow
    </span>
  </div>
  <div
    class="c-emivhp crlqugf"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="-1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      green
    </span>
  </div>
  <div
    class="c-emivhp crlqugf"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="-1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      cyan
    </span>
  </div>
  <div
    class="c-emivhp crlqugf c-wsxxws"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="-1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      blue
    </span>
  </div>
  <div
    class="c-emivhp crlqugf"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="-1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="cw6sirj"
>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      red
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      orange
    </span>
  </div>
  <div
    class="c-emivhp crlqugf"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="-1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      yellow
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      green
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      cyan
    </span>
  </div>
  <div
    class="c-emivhp c-wsxxws"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      blue
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="cw6sirj"
>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      red
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      orange
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      yellow
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      green
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      cyan
    </span>
  </div>
  <div
    class="c-emivhp c-wsxxws"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      blue
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="cw6sirj"
>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      red
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      orange
    </span>
  </div>
  <div
    class="c-emivhp c-wsxxws"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      yellow
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      green
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      cyan
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      blue
    </span>
  </div>
  <div
    class="c-emivhp"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-yzux30"
    >
      <span
        class="c-2ldwtt"
        tabindex="1"
      />
    </span>
    <span
      class="c-qgj373"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cw6sirj cjqmbyp c-xa4xwu"
  >
    <button
      class="c-emivhp c-wsxxws c-trc8a3 cvey2f3 c-x3mwbq"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cboe6wq"
      >
        red
      </span>
    </button>
    <button
      class="c-emivhp c-rg592x cvey2f3 c-x3mwbq"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cboe6wq"
      >
        orange
      </span>
    </button>
    <button
      class="c-emivhp c-rg592x cvey2f3 c-x3mwbq"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cboe6wq"
      >
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="cw6sirj cjqmbyp c-xa4xwu"
    style="margin-top: 24px;"
  >
    <button
      class="c-emivhp c-wsxxws c-trc8a3 cvey2f3"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cboe6wq"
      >
        red
      </span>
    </button>
    <button
      class="c-emivhp c-rg592x cvey2f3"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cboe6wq"
      >
        orange
      </span>
    </button>
    <button
      class="c-emivhp c-rg592x cvey2f3"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cboe6wq"
      >
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="cw6sirj cjqmbyp c-xa4xwu"
    style="margin-top: 24px;"
  >
    <button
      class="c-emivhp c-wsxxws c-trc8a3 cvey2f3 c-x7orua"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cboe6wq"
      >
        red
      </span>
    </button>
    <button
      class="c-emivhp c-rg592x cvey2f3 c-x7orua"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cboe6wq"
      >
        orange
      </span>
    </button>
    <button
      class="c-emivhp c-rg592x cvey2f3 c-x7orua"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cboe6wq"
      >
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="c-emivhp"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="c-yzux30"
  >
    <span
      class="c-2ldwtt"
      tabindex="1"
    />
  </span>
  <span
    class="c-qgj373"
  >
    OptionA
  </span>
</div>
`;
